<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="note">Заметка</string>
    <string name="app_name">Wake Me Up</string>
    <string name="repeat">Повтор</string>
    <string name="confirm">Сохранить</string>
    <string name="denied">Отмена</string>
    <string name="ok">OK</string>
    <string name="day">День</string>
    <string name="activity_name_1">Новый будильник</string>
    <string name="start_time">Время начала</string>
    <string name="end_time">Время окончания</string>
    <string name="parity">Четность</string>
    
</resources>