<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
    
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDay"
        android:layout_width="149dp"
        android:layout_height="64dp"
        android:onClick="onclick"
        android:text="@string/day" />

    <TextView
        android:id="@+id/noteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="20dip" />

    <EditText
        android:id="@+id/noteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" >
    </EditText>

    <Button
        android:id="@+id/btnRepeat"
        android:layout_width="148dp"
        android:layout_height="65dp"
        android:onClick="onclick"
        android:text="@string/repeat" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:gravity="bottom" >

        <Button
            android:id="@+id/confirmbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0px"
            android:layout_weight="0.15"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/deniedbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/denied" />

    </LinearLayout>
</LinearLayout>
</ScrollView>